# src/main/resources/openapi.yml
@@ -86,6 +86,32 @@ paths:
               schema:
                 $ref: '#/components/schemas/ResponseBase'
 
+  /credits/credit-card/by-customer/{customerId}:
+    get:
+      operationId: getCreditCardsByCustomerId
+      summary: Get all credit cards of the customer
+      parameters:
+        - name: customerId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of credit cards
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CreditCardResponse'
+        '404':
+          description: Customer not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseBase'
+
   /credits/credit-card/by-card-number/{cardNumber}:
     get:
       operationId: getCreditCardByCardNumber
